[gd_scene load_steps=3 format=3 uid="uid://b5w807e2siywa"]

[ext_resource type="Script" uid="uid://44yusc5xbx2s" path="res://normal_guy.gd" id="1_e1mxp"]
[ext_resource type="PackedScene" uid="uid://fyfghj3gqj4e" path="res://player_test_1.tscn" id="2_de43c"]

[node name="Normal guy" type="Node2D"]
script = ExtResource("1_e1mxp")

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="ChatUI" type="VBoxContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="ChatLog" type="TextEdit" parent="ChatUI"]
custom_minimum_size = Vector2(500, 500)
layout_mode = 2
editable = false
wrap_mode = 1
indent_wrapped_lines = true
scroll_smooth = true

[node name="HBoxContainer" type="HBoxContainer" parent="ChatUI"]
layout_mode = 2

[node name="PlayerInput" type="LineEdit" parent="ChatUI/HBoxContainer"]
custom_minimum_size = Vector2(500, 50)
layout_mode = 2

[node name="SendButton" type="Button" parent="ChatUI/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "send"

[node name="TypingTimer" type="Timer" parent="."]
wait_time = 0.005

[node name="Player_test_1" parent="." instance=ExtResource("2_de43c")]
position = Vector2(852, 284)

[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="pressed" from="ChatUI/HBoxContainer/SendButton" to="." method="_on_send_button_pressed"]
[connection signal="timeout" from="TypingTimer" to="." method="_on_TypingTimer_timeout"]
